--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -22,7 +22,7 @@
       <td><%= friend.twitter %></td>
       <td><%= link_to "Show", friend %></td>
       <td><%= link_to "Edit", edit_friend_path(friend) %></td>
-      <td><%= link_to "Destroy", friend, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+      <td><%= button_to "Delete my account", friend, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'btn btn-outline-danger' %></td>
     </tr>
     <% end %>
   </tbody>
