--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -32,6 +32,11 @@
   </div>
 
   <div class="field form-group">
+    <% form.label :user_id, style: "display: block" %>
+    <%= form.number_field :user_id, id: :friend_user_id, class:"form-control", value: current_user.id, type: :hidden %>
+  </div>
+
+  <br/>
     <%= form.submit class:"btn btn-secondary" %>
   </div>
 <% end %>
