--- a/app/views/friends/edit.html.erb
+++ b/app/views/friends/edit.html.erb
@@ -4,7 +4,8 @@
 
 <br>
 
-<div>
-  <%= link_to "Show this friend", @friend, class:'btn btn-secondary' %> |
+  <%= link_to "Show this friend", @friend, class:'btn btn-secondary' %>
+
+  <%= button_to "Delete", @friend, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'btn btn-outline-danger btn-sm' %>
+  
   <%= link_to "Back to friends", friends_path, class:'btn btn-dark' %>
-</div>
