--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,33 +1,35 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Friend List</h1>
+<% if user_signed_in? %>
 
-
-<table class="table">
-  <thead>
+<table class="table table-striped table-bordered table-hover">
+  <thead class="thead-dark">
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
+      <th>Name</th>
       <th>Phone</th>
       <th>Twitter</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
   <% @friends.each do |friend| %>
-    <tr>
-      <td><%= friend.first_name %></td>
-      <td><%= friend.last_name %></td>
-      <td><%= friend.phone %></td>
-      <td><%= friend.twitter %></td>
-      <td><%= link_to "Show", friend %></td>
-      <td><%= link_to "Edit", edit_friend_path(friend) %></td>
-      <td><%= button_to "Delete", friend, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'btn btn-outline-danger' %></td>
-    </tr>
+    <% if friend.user == current_user %>
+      <tr>
+        <td>
+          <%= link_to friend.first_name + ' ' + friend.last_name, friend %>
+        </td>
+        <td><%= friend.phone %></td>
+        <td><%= friend.twitter %></td>
+          <td><%= button_to "Delete", friend, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'btn btn-outline-danger btn-sm' %></td>
+      </tr>
     <% end %>
+  <% end %>
   </tbody>
 </table>
 
-
-
 <%= link_to "New friend", new_friend_path, class: 'btn btn-secondary' %>
+
+<% else %>
+  <h1>Hello World!</h1>
+  This is my first Rails Webpage...
+<% end %>
