--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -11,6 +11,9 @@
 <%= render @friend %>
 
 <div>
-  <%= link_to "Edit this friend", edit_friend_path(@friend), class:'btn btn-secondary' %> |
+  <%= link_to "Edit this friend", edit_friend_path(@friend), class:'btn btn-secondary' %>
+
+  <%= button_to "Delete", @friend, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'btn btn-outline-danger btn-sm' %>
+
   <%= link_to "Back to friends", friends_path, class:'btn btn-dark' %>
 </div>
