--- a/app/views/friends/edit.html.erb
+++ b/app/views/friends/edit.html.erb
@@ -3,9 +3,10 @@
 <%= render "form", friend: @friend %>
 
 <br>
+  <div class = 'text-center'>
+    <%= link_to "Show this friend", @friend, class:'editButton btn btn-secondary' %>
 
-  <%= link_to "Show this friend", @friend, class:'btn btn-secondary' %>
-
-  <%= button_to "Delete", @friend, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'btn btn-outline-danger btn-sm' %>
-  
-  <%= link_to "Back to friends", friends_path, class:'btn btn-dark' %>
+    <%= button_to "Delete", @friend, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'editButton btn btn-outline-danger' %>
+    
+    <%= link_to "Back to friends", friends_path, class:'editButton btn btn-dark' %>
+  </div>
