--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -2,8 +2,8 @@
 
 <% if user_signed_in? %>
 
-<table class="table table-striped table-bordered table-hover">
-  <thead class="thead-dark">
+<table class="table-responsive table table-striped table-bordered table-hover">
+  <thead class='table-dark'>
     <tr>
       <th>Name</th>
       <th>Phone</th>
