--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <% if user_signed_in? %>
 
 <table class="table-responsive table table-striped table-bordered table-hover">
@@ -7,7 +5,7 @@
     <tr>
       <th>Name</th>
       <th>Phone</th>
-      <th>Twitter</th>
+      <th>Content</th>
       <th></th>
     </tr>
   </thead>
@@ -19,7 +17,7 @@
           <%= link_to friend.first_name + ' ' + friend.last_name, friend %>
         </td>
         <td><%= friend.phone %></td>
-        <td><%= friend.twitter %></td>
+        <td><img class = "pikachu" src="<%= friend.twitter %>"></td>
           <td><%= button_to "Delete", friend, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'btn btn-outline-danger btn-sm' %></td>
       </tr>
     <% end %>
