--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -3,6 +3,9 @@
     <%= @friend.first_name %>
     <%= @friend.last_name %>
   </h1>
+  <iframe width="560" height="315" src="<%= @friend.phone %>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <br/>
+  <iframe width="560" height="315" src="<%= @friend.twitter %>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <p class="lead"><%= @friend.phone %></p>
   <hr class="my-4">
   <p><%= @friend.twitter %></p>
