--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -22,13 +22,13 @@
   </div>
 
   <div class="field form-group">
-    <% form.label :phone, style: "display: block" %>
-    <%= form.text_field :phone, class:"form-control", placeholder: "Phone" %>
+    <% form.label :og_sample, style: "display: block" %>
+    <%= form.text_field :og_sample, class:"form-control", placeholder: "Original Sample URL" %>
   </div>
 
   <div class="field form-group">
-    <% form.label :twitter, style: "display: block" %>
-    <%= form.text_field :twitter, class:"form-control", placeholder: "Twitter" %>
+    <% form.label :current_sample, style: "display: block" %>
+    <%= form.text_field :current_sample, class:"form-control", placeholder: "Current Sample URL" %>
   </div>
 
   <div class="field form-group">
