--- a/app/views/friends/edit.html.erb
+++ b/app/views/friends/edit.html.erb
@@ -1,3 +1,4 @@
+<div class='edit'>
 <h1>Editing friend</h1>
 
 <%= render "form", friend: @friend %>
@@ -10,3 +11,4 @@
     
     <%= link_to "Back to friends", friends_path, class:'editButton btn btn-dark' %>
   </div>
+</div>
