--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,29 +1,31 @@
 <% if user_signed_in? %>
 
-<table class="table-responsive table table-striped table-bordered table-hover">
-  <thead class='table-dark'>
-    <tr>
-      <th>Name</th>
-      <th>Phone</th>
-      <th>Content</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @friends.each do |friend| %>
-    <% if friend.user == current_user %>
+<div class ="table-responsive">
+  <table class="table table-striped table-bordered table-hover">
+    <thead class='table-dark'>
       <tr>
-        <td>
-          <%= link_to friend.first_name + ' ' + friend.last_name, friend %>
-        </td>
-        <td><%= friend.og_sample %></td>
-        <td><img class = "pikachu" src="<%= friend.current_sample %>"></td>
-          <td><%= button_to "Delete", friend, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'btn btn-outline-danger btn-sm' %></td>
+        <th>Name</th>
+        <th>Phone</th>
+        <th>Content</th>
+        <th></th>
       </tr>
+    </thead>
+    <tbody>
+    <% @friends.each do |friend| %>
+      <% if friend.user == current_user %>
+        <tr>
+          <td>
+            <%= link_to friend.first_name + ' ' + friend.last_name, friend %>
+          </td>
+          <td><%= friend.og_sample %></td>
+          <td><img class = "pikachu" src="<%= friend.current_sample %>"></td>
+            <td><%= button_to "Delete", friend, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'btn btn-outline-danger btn-sm' %></td>
+        </tr>
+      <% end %>
     <% end %>
-  <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
+</div>
 
 <%= link_to "New friend", new_friend_path, class: 'btn btn-secondary' %>
 
