--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? %>
 
-<div class ="table-responsive-md">
+<div class ="table-responsive-sm">
   <table class="table table-striped table-bordered table-hover">
     <thead class='table-dark'>
       <tr>
