--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -12,6 +12,11 @@
   <% end %>
 
   <div class="field form-group">
+  <% form.label :producer, style: "display: block" %>
+  <%= form.text_field :producer, class:"form-control", placeholder: "Producer" %>
+  </div>
+
+  <div class="field form-group">
     <% form.label :first_name, style: "display: block" %>
     <%= form.text_field :first_name, class:"form-control", placeholder: "First Name" %>
   </div>
