--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -12,18 +12,18 @@
   <% end %>
 
   <div class="field form-group">
-  <% form.label :producer, style: "display: block" %>
-  <%= form.text_field :producer, class:"form-control", placeholder: "Producer" %>
+    <% form.label :producer, style: "display: block" %>
+    <%= form.text_field :producer, class:"form-control", placeholder: "Producer" %>
   </div>
 
   <div class="field form-group">
-    <% form.label :first_name, style: "display: block" %>
-    <%= form.text_field :first_name, class:"form-control", placeholder: "First Name" %>
+    <% form.label :original_source, style: "display: block" %>
+    <%= form.text_field :original_source, class:"form-control", placeholder: "Original Sample Source" %>
   </div>
 
   <div class="field form-group">
-    <% form.label :last_name, style: "display: block" %>
-    <%= form.text_field :last_name, class:"form-control", placeholder: "Last Name" %>
+    <% form.label :current_source, style: "display: block" %>
+    <%= form.text_field :current_source, class:"form-control", placeholder: "Current Sample Source" %>
   </div>
 
   <div class="field form-group">
