--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -3,7 +3,8 @@
     <div class="card showCard">
         <iframe width="400" height="200" src="<%= @friend.og_sample %>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <div class="card-body">
-            <h5 class="card-title">Sampled From: <%= @friend.last_name %></h5>
+            <h3 class="card-title">SAMPLED FROM</h3>
+            <h5 class="card-text"><%= @friend.original_source %></h5>
             <br/>
               <div class="card-body">
                 <p class="card-text">Producer: <h2><%= @friend.producer %></h2></p>
@@ -14,11 +15,12 @@
       <div class="card showCard">
         <iframe width="400" height="200" src="<%= @friend.current_sample %>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="card-body">
-              <h5 class="card-title">Sampled From: <%= @friend.first_name %></h5>
+              <h3 class="card-title">SAMPLED IN</h3>
+              <h5 class="card-text"><%= @friend.current_source %></h5>
               <br/>
                 <div class="card-body">
                 <p class="card-text">Producer: <h2><%= @friend.producer %></h2></p>
-                <p class="card-text"><small class="text-muted">[ORIGINAL SAMPLE]</small></p>
+                <p class="card-text"><small class="text-muted">[CURRENT SAMPLE]</small></p>
                 </div>
             </div>
       </div>
