--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -6,7 +6,7 @@
       <tr>
         <th class='th-sm'>Producer</th>
         <th class='th-sm'>Original Source</th>
-        <th style="width: 20%" class='th-sm'>Current Source</th>
+        <th class='th-sm'>Current Source</th>
         <th class='th-sm'>Content</th>
         <th class='th-sm'></th>
       </tr>
