--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,5 +1,13 @@
 <% if user_signed_in? %>
-
+<div class="container searchContainer">
+<form class="form-control-sm searchBar">
+<%= search_form_for @q do |f| %>
+  <%= f.label :producer_cont %>
+  <%= f.search_field :producer_cont %>
+  <%= f.submit %>
+<% end %>
+</form>
+</div>
 <div style="height: 600px;overflow: scroll;" class ="table-responsive-sm mainTable">
   <table class="table table-sm table-striped table-bordered table-hover">
     <thead class='table-dark'>
