--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,11 +62,16 @@ body {
 }
 
 .searchBar {
-  width: 25%;
+  min-width: 20%;
   font-size: 12px;
-  float: right;
+  border: 1px solid grey;
 }
 
 .searchContainer {
-  padding-right: 35px;
+  text-align: center;
+}
+
+.searchField {
+  width: 100px;
+  min-width: 10px;
 }
