--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -4,7 +4,7 @@
   <%= search_form_for @q do |f| %>
     <%= f.label :producer_or_original_source_cont %>
     <%= f.search_field :producer_or_original_source_cont, class:'searchField'%>
-    <%= f.submit %>
+    <%= f.submit class:'btn btn-sm btn-dark' %>
   <% end %>
   </form>
 </div>
