--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -2,8 +2,8 @@
 <div class="searchContainer">
   <form class="form-control-sm searchBar">
   <%= search_form_for @q do |f| %>
-    <%= f.label :producer_or_original_source_cont %>
-    <%= f.search_field :producer_or_original_source_cont, class:'searchField'%>
+    <%= f.label :producer_or_original_source_cont %>:
+    <%= f.search_field :producer_or_original_source_cont, class:'searchField', placeholder:'type in here'%>
     <%= f.submit class:'btn btn-sm btn-dark' %>
   <% end %>
   </form>
