--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -42,6 +42,8 @@
 <%= link_to "New friend", new_friend_path, class: 'btn btn-secondary' %>
 
 <% else %>
+  <div class='container main'>
   <h1>Hello World!</h1>
   This is my first Rails Webpage...
+  </div>
 <% end %>
