--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -39,7 +39,7 @@
   </table>
 </div>
 
-<%= link_to "New friend", new_friend_path, class: 'btn btn-secondary' %>
+<%= link_to "New friend", new_friend_path, class: 'newButton btn btn-secondary' %>
 
 <% else %>
   <div class='container main'>
