--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,7 +1,12 @@
 <div class='about'>
-<h1>About Us...</h1>
-
+<h2>About Us...</h2>
+<br/>
+<br/>
 <p>
     <%= @about_me %>
 </p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a velit semper, fringilla augue et, mattis tellus. Quisque fermentum vulputate fringilla. Donec sit amet placerat nulla. Vivamus fringilla dolor ac augue ornare, quis luctus nisi tristique. Proin bibendum, lacus nec posuere ornare, est mauris sollicitudin eros, accumsan blandit nisl sem maximus est. Nulla facilisi. Morbi interdum pulvinar magna quis finibus. Vivamus vehicula eleifend aliquam. Vivamus tempus, lorem vitae feugiat consequat, tellus justo convallis massa, sit amet ullamcorper enim est ut nisl. Pellentesque rutrum vehicula dui, sed pulvinar sem. Maecenas elementum dapibus elit vel eleifend. Mauris dapibus enim at felis malesuada, vitae mollis quam porttitor. Morbi maximus leo quis odio vulputate ultrices. Donec rutrum est nec malesuada dictum. Nunc vel neque massa. Cras elementum massa quis neque condimentum cursus.</p>
+
+<p>
+Fusce dui urna, auctor quis rhoncus sed, feugiat nec justo. Donec et erat vehicula, vulputate dolor vel, posuere ante. Curabitur lectus lacus, suscipit quis lobortis non, egestas placerat justo. Pellentesque bibendum aliquet libero, eget commodo enim dictum nec. Proin pharetra interdum mi, a malesuada elit iaculis in. Suspendisse et tincidunt massa, vel commodo quam. Sed sodales est et nisl dapibus pretium. Vivamus tempus risus quis porta tristique. Nunc laoreet molestie iaculis.</p>
 </div>
