--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,49 +1,48 @@
 <% if user_signed_in? %>
 <div class="mainPage">
-<div class="searchContainer">
-  <form class="form-control-sm searchBar">
-  <%= search_form_for @q do |f| %>
-    <%= f.label :producer_or_original_source_cont %>:
-    <%= f.search_field :producer_or_original_source_cont, class:'searchField', placeholder:'type in here'%>
-    <%= f.submit class:'btn btn-sm btn-dark' %>
-  <% end %>
-  </form>
-</div>
-<br/>
-<div style="height: 500px;overflow: scroll;" class ="table-responsive-sm mainTable">
-  <table class="table table-sm table-striped table-bordered table-hover">
-    <thead class='table-dark'>
-      <tr>
-        <th class='th-sm'>Producer</th>
-        <th class='th-sm'>Original Source + Current Sample</th>
-        <th class='th-sm'></th>
-      </tr>
-    </thead>
-    <tbody>
-    <% @friends.each do |friend| %>
-      <% if friend.user == current_user %>
-        <tr>
-          <td>
-            <%= friend.producer %>
-          </td>
-          <td style="height:20px; overflow:hidden">
-            <%= link_to friend.original_source + ' / ' + friend.current_source, friend %>
-          </td>
-
-            <td><%= button_to "Delete", friend, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'btn btn-outline-danger btn-sm' %></td>
-        </tr>
-      <% end %>
+  <div class="searchContainer">
+    <form class="form-control-sm searchBar">
+    <%= search_form_for @q do |f| %>
+      <%= f.label :producer_or_original_source_cont %>:
+      <%= f.search_field :producer_or_original_source_cont, class:'searchField', placeholder:'type in here'%>
+      <%= f.submit class:'btn btn-sm btn-dark' %>
     <% end %>
-    </tbody>
-  </table>
-</div>
+    </form>
+  </div>
+  <br/>
+  <div style="height: 500px;overflow: scroll;" class ="table-responsive-sm mainTable">
+    <table class="table table-sm table-striped table-bordered table-hover">
+      <thead class='table-dark'>
+        <tr>
+          <th class='th-sm'>Producer</th>
+          <th class='th-sm'>Original Source + Current Sample</th>
+          <th class='th-sm'></th>
+        </tr>
+      </thead>
+      <tbody>
+      <% @friends.each do |friend| %>
+        <% if friend.user == current_user %>
+          <tr>
+            <td>
+              <%= friend.producer %>
+            </td>
+            <td style="height:20px; overflow:hidden">
+              <%= link_to friend.original_source + ' / ' + friend.current_source, friend %>
+            </td>
+
+              <td><%= button_to "Delete", friend, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'btn btn-outline-danger btn-sm' %></td>
+          </tr>
+        <% end %>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
 
 <%= link_to "New friend", new_friend_path, class: 'newButton btn btn-secondary' %>
 
 <% else %>
   <div class='container main'>
-  <h1>Hello World!</h1>
-  This is my first Rails Webpage...
+    <h4>[Log In to See Your Collection]</h4>
   </div>
 <% end %>
