--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -11,7 +11,7 @@
   </div>
   <br/>
   <div style="height: 500px;overflow: scroll;" class ="table-responsive-sm mainTable">
-    <table class="table table-sm table-striped table-bordered table-hover">
+    <table class="table table-striped table-bordered table-hover">
       <thead class='table-dark'>
         <tr>
           <th class='th-sm'>Producer</th>
