completed sort, table styles

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,7 +31,6 @@
 .table {
   font-family: 'IBM Plex Sans Hebrew', sans-serif;
 }
-
 .show {
   font-family: 'IBM Plex Sans Hebrew', sans-serif;
   overflow-x: hidden;
@@ -94,4 +93,7 @@ body {
 
 .nav-item {
   font-family: 'Big Shoulders Inline Text', cursive;
+}
+a:visited,hover,active{
+  color: white;
 }
