--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -11,11 +11,12 @@
   </div>
   <br/>
   <div style="height: 500px;overflow: scroll;" class ="table-responsive-sm mainTable">
-    <table class="table table-striped table-bordered table-hover">
-      <thead class='table-dark'>
-        <tr>
-          <th class='th-sm'>Producer</th>
-          <th class='th-sm'>Original Source + Current Sample</th>
+    <table class="table table-striped table-bordered table-hover table-dark">
+      <thead>
+        <tr class='table-row'>
+          <th class='th-sm'><%= sort_link(@q, :producer) %></th>
+          <th class='th-sm'><%= sort_link(@q, :original_source) %></th>
+
           <th class='th-sm'></th>
         </tr>
       </thead>
@@ -27,7 +28,7 @@
               <%= friend.producer %>
             </td>
             <td style="height:20px; overflow:hidden">
-              <%= link_to friend.original_source + ' / ' + friend.current_source, friend %>
+              <%= link_to friend.original_source + ' + ' + friend.current_source, friend %>
             </td>
 
               <td><%= button_to "Delete", friend, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'btn btn-outline-danger btn-sm' %></td>
@@ -39,7 +40,7 @@
   </div>
 </div>
 
-<%= link_to "New friend", new_friend_path, class: 'newButton btn btn-secondary' %>
+<%= link_to "New friend", new_friend_path, class: 'newButton btn btn-dark' %>
 
 <% else %>
   <div class='container main'>
