--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -4,7 +4,7 @@
     <form class="form-control-sm searchBar">
     <%= search_form_for @q do |f| %>
       <%= f.label :producer_or_original_source_cont %>:
-      <%= f.search_field :producer_or_original_source_cont, class:'searchField', placeholder:'type in here'%>
+      <%= f.search_field :producer_or_original_source_or_current_source_cont, class:'searchField', placeholder:'type in here'%>
       <%= f.submit class:'btn btn-sm btn-dark' %>
     <% end %>
     </form>
@@ -15,7 +15,7 @@
       <thead>
         <tr class='table-row'>
           <th class='th-sm'><%= sort_link(@q, :producer) %></th>
-          <th class='th-sm'><%= sort_link(@q, :original_source) %></th>
+          <th class='th-sm'><%= sort_link(@q, :original_source, 'Original Sample + Current Usage') %></th>
           <th class='th-sm'></th>
         </tr>
       </thead>
@@ -29,7 +29,6 @@
             <td style="height:20px; overflow:hidden">
               <%= link_to friend.original_source + ' + ' + friend.current_source, friend %>
             </td>
-
               <td><%= button_to "Delete", friend, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'btn btn-danger btn-sm' %></td>
           </tr>
         <% end %>
