--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -8,7 +8,7 @@
       <%= f.submit class:'btn btn-sm btn-dark' %>
     <% end %>
     </form>
-  </div> 
+  </div>
   <br/>
   <div style="height: 500px;overflow: scroll;" class ="table-responsive-sm mainTable">
     <table class="table table-striped table-bordered table-hover table-dark">
@@ -38,7 +38,7 @@
   </div>
 </div>
 <br/>
-<%= link_to "New friend", new_friend_path, class: 'newButton btn btn-dark' %>
+<%= link_to "add a sample", new_friend_path, class: 'newButton btn btn-dark' %>
 
 <% else %>
   <div class='container main'>
