--- a/app/views/friends/new.html.erb
+++ b/app/views/friends/new.html.erb
@@ -1,9 +1,9 @@
-<h1>Add New friend</h1>
+<h1 class='about'>Add Sample</h1>
 <br>
 <%= render "form", friend: @friend %>
 
 <br>
 
 <div class='text-center'>
-  <%= link_to "Back to friends", friends_path, class:'btn btn-dark' %>
+  <%= link_to "back to sample collection", friends_path, class:'btn btn-dark' %>
 </div>
