--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -29,11 +29,11 @@
   <%= render @friend %>
   <br/>
   <div class='btn-group'>
-    <%= link_to "Edit this friend", edit_friend_path(@friend), class:'showButton btn btn-secondary' %>
+    <%= link_to "edit this sample listing", edit_friend_path(@friend), class:'showButton btn btn-secondary' %>
 
-    <%= button_to "Delete", @friend, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'showButton btn btn-outline-danger' %>
+    <%= button_to "delete", @friend, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'showButton btn btn-outline-danger' %>
 
-    <%= link_to "Back to friends", friends_path, class:'showButton btn btn-dark' %>
+    <%= link_to "back to sample collection", friends_path, class:'showButton btn btn-dark' %>
   </div>
 </div>
 
