--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card about">
   <div class="card-header">
     <h2>Edit Profile<% resource_name.to_s.humanize %></h2>
   </div>
@@ -42,7 +42,7 @@
   </div>
 </div>
 <br/>
-<div class="card">
+<div class="card about">
   <div class="card-body">
     <h3>Cancel my account</h3>
     <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
