--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -12,7 +12,7 @@
 
       <% if user_signed_in? %>
           <li class="nav-item">
-          <%= link_to 'Add Friend', new_friend_path, class:'nav-link' %>
+          <%= link_to 'Add Dustloop', new_dustloop_path, class:'nav-link' %>
           </li>
           
           <li class="nav-item">
