--- a/app/views/dustloops/index.html.erb
+++ b/app/views/dustloops/index.html.erb
@@ -38,7 +38,7 @@
   </div>
 </div>
 <br/>
-<%= link_to "add a sample", new_dustloop_path, class: 'newButton btn btn-dark' %>
+<%= link_to "add a dustloop", new_dustloop_path, class: 'newButton btn btn-dark' %>
 
 <% else %>
   <div class='container main'>
