--- a/app/views/dustloops/new.html.erb
+++ b/app/views/dustloops/new.html.erb
@@ -1,9 +1,12 @@
-<h1 class='about'>Add Sample</h1>
+<h1 class='about'>Create Entry</h1>
+<br/>
+  <p class='about'>URL's for the original and current</p>
+  <pstyle = 'font-size: 10px' class='about'>Use format: youtube.com/embed/(<b style = 'color:red'>video ID</b>);start=(<b style = 'color:red'>start time in seconds</b>)&;end=(<b style = 'color:red'>end time in seconds</b>)&;rel=0</p>
 <br>
 <%= render "form", dustloop: @dustloop %>
 
 <br>
 
 <div class='text-center'>
-  <%= link_to "back to sample collection", dustloops_path, class:'btn btn-dark' %>
+  <%= link_to "back to collection", dustloops_path, class:'btn btn-dark' %>
 </div>
