--- a/app/views/dustloops/_form.html.erb
+++ b/app/views/dustloops/_form.html.erb
@@ -42,6 +42,6 @@
   </div>
 
   <br/>
-    <%= form.submit 'add sample to your collection', class:"btn btn-dark" %>
+    <%= form.submit 'add to your collection', class:"btn btn-dark" %>
   </div>
 <% end %>
