--- a/app/views/dustloops/index.html.erb
+++ b/app/views/dustloops/index.html.erb
@@ -36,7 +36,7 @@
       </tbody>
     </table>
   </div>
-    <%= will_paginate @dustloops, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
+  <%= paginate @dustloops, theme: 'bootstrap-5' %>
 </div>
 <br/>
 <%= link_to "add a dustloop", new_dustloop_path, class: 'newButton btn btn-dark' %>
