--- a/app/views/dustloops/index.html.erb
+++ b/app/views/dustloops/index.html.erb
@@ -10,7 +10,7 @@
     </form>
   </div>
   <br/>
-  <%= paginate @dustloops, theme: 'bootstrap-5' %>
+  <%= paginate @dustloops %>
   <div style="height: 500px;overflow: scroll;" class ="table-responsive-sm mainTable">
     <table class="table table-striped table-bordered table-hover table-dark">
       <thead>
