just need colors

--- a/app/views/dustloops/index.html.erb
+++ b/app/views/dustloops/index.html.erb
@@ -12,7 +12,7 @@
   <br/>
   <%= paginate @dustloops %>
   <div style="height: 500px;overflow: scroll;" class ="table-responsive-sm mainTable">
-    <table class="table table-striped table-bordered table-hover table-dark">
+    <table class="table table-sm table-striped table-bordered table-hover table-dark">
       <thead>
         <tr class='table-row'>
           <th class='th-sm'><%= sort_link(@q, :producer) %></th>
@@ -39,7 +39,7 @@
   </div>
 </div>
 <%= link_to "add a dustloop", new_dustloop_path, class: 'newButton btn btn-dark' %>
-
+<br/>
 <% else %>
   <div class='container main'>
     <h4>[Log In to See Your Collection]</h4>
