--- a/app/views/dustloops/index.html.erb
+++ b/app/views/dustloops/index.html.erb
@@ -11,13 +11,16 @@
   </div>
   <br/>
   <%= paginate @dustloops %>
+</svg>
   <div style="height: 450px;overflow: scroll;" class ="table-responsive-sm mainTable">
     <table class="table table-sm table-striped table-bordered table-hover table-dark">
       <thead>
         <tr class='table-row'>
-          <th class='th-sm'><%= sort_link(@q, :producer) %></th>
-          <th class='th-sm'><%= sort_link(@q, :original_source, 'Original Sample + Current Usage') %></th>
-          <th class='th-sm'></th>
+          <th class='th-sm', style='text-align:center'><%= sort_link(@q, :producer)  %></th>
+          <th class='th-sm', style='text-align:center'><%= sort_link(@q, :original_source, 'Original Sample + Current Usage') %></th>
+          <th class='th-sm', style='text-align:center'><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
+          <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
+        </svg></th>
         </tr>
       </thead>
       <tbody>
