--- a/app/views/dustloops/new.html.erb
+++ b/app/views/dustloops/new.html.erb
@@ -8,5 +8,5 @@
 <br>
 
 <div class='text-center'>
-  <%= link_to "back to collection", dustloops_path, class:'btn btn-dark' %>
+  <%= link_to raw("<i class=\"bi bi-disc\" style='font-style:normal;'>  back to sample collection</i>"), dustloops_path, class:  'btn btn-dark' %>
 </div>
