--- a/app/views/dustloops/index.html.erb
+++ b/app/views/dustloops/index.html.erb
@@ -33,7 +33,7 @@
             <td style="height:20px; overflow:hidden">
               <%= link_to dustloop.original_source + ' + ' + dustloop.current_source, dustloop %>
             </td>
-              <td><%= button_to "Delete", dustloop, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'btn btn-danger btn-sm' %></td>
+              <td><%= button_to "delete", dustloop, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'btn btn-danger btn-sm' %></td>
           </tr>
         <% end %>
       <% end %>
@@ -42,7 +42,7 @@
   </div>
 </div>
 <br/>
-<%= link_to "add a dustloop", new_dustloop_path, class: 'newButton btn btn-dark' %>
+<%= link_to raw("<i class=\"bi bi-plus-square-fill\" style='font-style:normal;'> add a dustloop</i>"), new_dustloop_path, class: 'newButton btn btn-dark' %>
 <% else %>
   <div class='container main'>
     <h4>[Log In to See Your Collection]</h4>
