--- a/app/views/dustloops/index.html.erb
+++ b/app/views/dustloops/index.html.erb
@@ -27,13 +27,13 @@
       <% @dustloops.each do |dustloop| %>
         <% if dustloop.user == current_user %>
           <tr>
-            <td>
+            <td style='text-align:center'>
               <%= dustloop.producer %>
             </td>
-            <td style="height:20px; overflow:hidden">
+            <td style="height:20px; overflow:hidden; text-align: center;">
               <%= link_to dustloop.original_source + ' + ' + dustloop.current_source, dustloop %>
             </td>
-              <td><%= button_to "delete", dustloop, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'btn btn-danger btn-sm' %></td>
+              <td style='text-align:center'><%= button_to "delete", dustloop, form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class:'btn btn-danger btn-sm' %></td>
           </tr>
         <% end %>
       <% end %>
