--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -12,15 +12,15 @@
 
       <% if user_signed_in? %>
           <li class="nav-item">
-          <%= link_to 'Add Dustloop', new_dustloop_path, class:'nav-link' %>
+          <%= link_to 'add dustLoop', new_dustloop_path, class:'nav-link' %>
           </li>
           
           <li class="nav-item">
-          <%= link_to 'Sign Out', destroy_user_session_path, method: :delete,class:'nav-link' %>
+          <%= link_to 'sign out', destroy_user_session_path, method: :delete,class:'nav-link' %>
           </li>
 
           <li class="nav-item">
-          <%= link_to 'Edit Profile', edit_user_registration_path, class:'nav-link' %>
+          <%= link_to 'edit profile', edit_user_registration_path, class:'nav-link' %>
           </li>
       
         <% else %>
