--- a/app/views/dustloops/show.html.erb
+++ b/app/views/dustloops/show.html.erb
@@ -31,7 +31,7 @@
   <div class='btn-group'>
   <%= link_to raw("<i class=\"bi bi-pencil\" style='font-style:normal;'> edit this sample collection</i>"), edit_dustloop_path(@dustloop), class: 'showButton btn btn-secondary' %>
 
-  <%= link_to raw("<i class=\"bi bi-trash\" style='font-style:normal;'> delete</i>"), @dustloop, form: { data: {turbo_confirm: "Are you sure?" } }, method: :delete, class:'showButton btn btn-outline-danger' %>
+  <%= button_to raw("<i class=\"bi bi-trash\" style='font-style:normal;'> delete</i>"), @dustloop, form: { data: {turbo_confirm: "Are you sure?" } }, method: :delete, class:'showButton btn btn-outline-danger' %>
 
   <%= link_to raw("<i class=\"bi bi-disc\" style='font-style:normal;'>  back to sample collection</i>"), dustloops_path, class: 'showButton btn btn-dark' %>
   </div>
@@ -51,4 +51,6 @@
         </div>
     </div>
 </section>
+
+
 
