--- a/app/views/dustloops/index.html.erb
+++ b/app/views/dustloops/index.html.erb
@@ -14,7 +14,9 @@
 /
 <%= Dustloop.count %>
 <br/>
+<div class='paginationIcon'>
 <%== pagy_bootstrap_nav(@pagy) %>
+</div>
   <div style="height: 450px;overflow: scroll;" class ="table-responsive-sm mainTable">
     <table class="table table-sm table-striped table-bordered table-hover table-dark">
       <thead>
