--- a/app/views/dustloops/index.html.erb
+++ b/app/views/dustloops/index.html.erb
@@ -11,6 +11,7 @@
   </div> 
   <br/>
   <%= paginate @dustloops %>
+</svg>
   <div style="height: 450px;overflow: scroll;" class ="table-responsive-sm mainTable">
     <table class="table table-sm table-striped table-bordered table-hover table-dark">
       <thead>
