--- a/app/views/dustloops/index.html.erb
+++ b/app/views/dustloops/index.html.erb
@@ -10,6 +10,9 @@
     </form>
   </div> 
   <br/>
+  <%= @dustloops.count %>
+  /
+  <%= Dustloop.count %>
   <%= paginate @dustloops %>
 </svg>
   <div style="height: 450px;overflow: scroll;" class ="table-responsive-sm mainTable">
