--- a/app/views/dustloops/index.html.erb
+++ b/app/views/dustloops/index.html.erb
@@ -49,5 +49,7 @@
 <% else %>
   <div class='container main'>
     <h4>[Log In to See Your Collection]</h4>
+    <br/>
+    <%= image_tag('giphy4.gif', draggable: "true", id: "drag1", class: 'loginGif') %>
   </div>
 <% end %>
