--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -4,7 +4,7 @@
 <p>
     <%= @about_me %>
 </p>
-<p>Dustloop is an app that allows the user to create and hold a personal list of instances of samples in music along with the original source. There is no popular defined term for this combination of original sample and current usage, and so here a singular unit can be defined as one(1) dustLoop, that can be further created, edited, and removed by the user. Dustloop is all about DITC -- Digging in the Crates, but also very much Database Implementation through CRUD.</p>
+<p>Dustloops is an app that allows the user to create and hold a personal list of instances of samples in music along with the original source. There is no popular defined term for this combination of original sample and current usage, and so here a singular unit can be defined as one(1) dustLoop, that can be further created, edited, and removed by the user. Dustloop is all about DITC -- Digging in the Crates, but also very much Database Implementation through CRUD.</p>
 
 <p>It is important the user be able to access the specific moment(s) in the song that the sampling occurred, and also the specific moment(s) in the newer song when the sample was used. In doing so, the user has both sets of data readily available anytime stricter analysis of the producer's techniques, original intent, stylistic choices, etc. is necessary.</p>
 
