--- a/app/views/dustloops/new.html.erb
+++ b/app/views/dustloops/new.html.erb
@@ -1,7 +1,7 @@
 <h1 class='about'>Create Entry</h1>
 <br/>
   <p class='about'>URL's for the original and current</p>
-  <pstyle = 'font-size: 10px' class='about'>Use format: youtube.com/embed/<b style = 'color:red'>video ID?</b>;start=<b style = 'color:red'>start time in seconds</b>&;end=<b style = 'color:red'>end time in seconds</b>&;rel=0</p>
+  <pstyle = 'font-size: 10px' class='about'>Use format: youtube.com/embed/<b style = 'color:red'>video ID</b>?;start=<b style = 'color:red'>start time in seconds</b>&;end=<b style = 'color:red'>end time in seconds</b>&;rel=0</p>
 <br>
 <%= render "form", dustloop: @dustloop %>
 
